--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 main {
     width: calc(100% - 230px);
-    height: 100%;
+    /* height: 100%; */
     background-color: var(--primary-color);
-    overflow: auto;
+    overflow-y: auto;
 }
 /* Header Section */
 #header-section{
@@ -35,7 +35,13 @@ main #category a{
 }
 /* /Nav */
 
-/* Section Recently-played */
+/* Section Cards */
+main .card{
+    width: calc(100%/6);
+}
+main .card h3{
+    font-size: 15px;
+}
 main img{
     width: 100%;
 }
@@ -51,6 +57,7 @@ main h3{
 }
 main .row{
     margin-top: 1.25rem;
+    width: 100%;
 }
 main section:not(:first-child){
     margin-top: 2.125rem;
@@ -59,19 +66,20 @@ main p{
     color: var(--grey);
     padding: 10px 10px;
 }
-main .card{
-    width: 15%;
+main .card .box{
     padding: 10px 8px;
     aspect-ratio: 1;
     max-width: 400px;
-    min-width: 150px;
 }
 
 main .card .border-radius-img img{
     border-radius: 50%;
 }
 
-/* /Section Recently-played */
+main #popular-artists{
+    padding-bottom: 1.25rem;
+}
+/* /Section Cards */
 
 
 /* Desktop */
@@ -80,30 +88,29 @@ main .card .border-radius-img img{
         flex-grow: 1;
     }
     main .card{
-        width: 20%;
+        width: calc(100%/4);
+    }
+    main .row{
+        flex-wrap: wrap;
     }
 }
 /* Tablet */
 @media screen and (max-width: 640px) {
-    main {
-        flex-grow: 1;
-    }
     main .card{
         width: 45%;
     }
     main .row{
+        flex-wrap: wrap;
         justify-content: center;
     }
 }
 /* Mobile */
 @media screen and (max-width: 552px) {
-    main {
-        flex-grow: 1;
-    }
     main .card{
         width: 45%;
     }
     main .row{
+        flex-wrap: wrap;
         justify-content: center;
     }
 }
